@@ -13,6 +13,7 @@ import evaluation.listeners.IGameListener;
 import evaluation.metrics.Event;
 import games.GameType;
 import utilities.ElapsedCpuChessTimer;
+import utilities.Pair;
 
 import java.util.*;
 import java.util.function.BiFunction;
@@ -20,7 +21,6 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 
 import static core.CoreConstants.GameResult.GAME_ONGOING;
-import static java.util.stream.Collectors.toList;
 
 /**
  * Contains all game state information.
@@ -53,7 +53,9 @@ public abstract class AbstractGameState {
     protected ElapsedCpuChessTimer[] playerTimer;
 
     // A record of all actions taken to reach this game state
-    private List<AbstractAction> history = new ArrayList<>();
+    // The history is stored as a list of pairs, where the first element is the player who took the action
+    // this is in chronological order
+    private List<Pair<Integer, AbstractAction>> history = new ArrayList<>();
     private List<String> historyText = new ArrayList<>();
 
     // Status of the game, and status for each player (in cooperative games, the game status is also each player's status)
@@ -65,6 +67,11 @@ public abstract class AbstractGameState {
     protected Stack<IExtendedSequence> actionsInProgress = new Stack<>();
     CoreParameters coreGameParameters;
     private int gameID;
+    // rnd is used for all random number generation in the game - for events within the game
+    protected Random rnd;
+    // redeterminisationRnd is used for redeterminisation only - this is to ensure that the main game is not affected
+    // this is not initialised from any seed, as redeterminisation is used to hide data from players and cannot affect the game itself
+    protected Random redeterminisationRnd = new Random();
 
     /**
      * @param gameParameters - game parameters.
@@ -82,7 +89,7 @@ public abstract class AbstractGameState {
     /**
      * Resets variables initialised for this game state.
      */
-    void reset() {
+    protected void reset() {
         allComponents = new Area(-1, "All Components");
         gameStatus = GAME_ONGOING;
         playerResults = new CoreConstants.GameResult[getNPlayers()];
@@ -96,6 +103,7 @@ public abstract class AbstractGameState {
         roundCounter = 0;
         firstPlayer = 0;
         actionsInProgress.clear();
+        rnd = new Random(gameParameters.randomSeed);
     }
 
     /**
@@ -152,10 +160,14 @@ public abstract class AbstractGameState {
         return gameType;
     }
 
+
+    protected void setHistoryAt(int index, Pair<Integer, AbstractAction> action) {
+        history.set(index, action);
+    }
     /**
      * @return All actions that have been executed on this state since reset()/initialisation
      */
-    public List<AbstractAction> getHistory() { return new ArrayList<>(history);}
+    public List<Pair<Integer, AbstractAction>> getHistory() { return new ArrayList<>(history);}
     public List<String> getHistoryAsText() {
         return new ArrayList<>(historyText);
     }
@@ -169,7 +181,7 @@ public abstract class AbstractGameState {
      * In general getCurrentPlayer() should be used to find the current player.
      * getTurnOwner() will give a different answer if an Extended Action Sequence is in progress.
      * In this case getTurnOwner() returns the underlying player on whose turn the Action Sequence was initiated.
-     * @return
+     * @return the player whose turn it currently is (which may be different to the next player to act)
      */
     public int getTurnOwner() {return turnOwner;}
     public int getFirstPlayer() {return firstPlayer;}
@@ -198,6 +210,16 @@ public abstract class AbstractGameState {
         turnOwner = newFirstPlayer;
     }
 
+    /**
+     * The framework maintains a random number generator for each game state.
+     * Use this as a default; there is no need to create your own.
+     * The one exception to this guideline is in the copy() method, where redeterminisation should *not* use this generator.
+     * It should use redeterminisationRnd instead.
+     * @return the Random to use for game decisions/events
+     */
+    public Random getRnd() {
+        return rnd;
+    }
     public void addListener(IGameListener listener) {
         if (!listeners.contains(listener))
             listeners.add(listener);
@@ -232,7 +254,6 @@ public abstract class AbstractGameState {
         addAllComponents(); // otherwise the list of allComponents is only ever updated when we copy the state!
         return allComponents;
     }
-    public double[] getFeatureVector() {return null;} //Gets a feature vector for games that have it, otherwise returns null
 
     /**
      * While getAllComponents() returns an Area containing every component, this method
@@ -285,6 +306,10 @@ public abstract class AbstractGameState {
         s.turnCounter = turnCounter;
         s.turnOwner = turnOwner;
         s.firstPlayer = firstPlayer;
+        // If we are copying from a player's perspective, then we branch the RNG so that the master copy
+        // is not called an arbitrary number of times. This is to ensure that all shuffles in the main game are
+        // the same if we start with the same seed
+        s.rnd = playerId == -1 ? rnd : new Random(System.currentTimeMillis());
 
         if (!coreGameParameters.competitionMode) {
             s.history = new ArrayList<>(history);
@@ -318,7 +343,7 @@ public abstract class AbstractGameState {
      * @param action The action that has just been applied (or is about to be applied) to the game state
      */
     protected final void recordAction(AbstractAction action, int player) {
-        history.add(action);
+        history.add(new Pair<>(player, action.copy()));
         historyText.add("Player " + player + " : " + action.getString(this));
     }
 
@@ -397,6 +422,12 @@ public abstract class AbstractGameState {
      * Create a copy of the game state containing only those components the given player can observe (if partial
      * observable).
      *
+     * This is also responsible for shuffling any hidden information, such as cards in a deck. (aka 'redeterminisation')
+     * There are some utilities to assist with this in utilities.DeterminisationUtilities.
+     * One of the most important things to remember is that the random number generator from getRnd() should not be used in this method.
+     * This is to avoid this RNG stream being distorted by the number of player actions taken (where those actions are not themselves inherently random)
+     * Instead use redeterminisationRnd, which is provided for this specific purpose.
+     *
      * @param playerId - player observing this game state.
      */
     protected abstract AbstractGameState _copy(int playerId);
@@ -415,7 +446,7 @@ public abstract class AbstractGameState {
      * This provides the current score in game terms. This will only be relevant for games that have the concept
      * of victory points, etc.
      * If a game does not support this directly, then just return 0.0
-     * (Unlike _getHeuristicScore(), there is no constraint on the range..whatever the game rules say.
+     * (Unlike _getHeuristicScore(), there is no constraint on the range...whatever the game rules say.
      *
      * @param playerId - player observing the state.
      * @return - double, score of current state
@@ -434,7 +465,7 @@ public abstract class AbstractGameState {
     /**
      * This sets the number of tieBreak levels in a game.
      * If we reach this level then we stop recursing.
-     * @return
+     * @return the number of levels of tiebreaks in the game
      */
     public int getTiebreakLevels() {return 5;}
 
@@ -456,29 +487,23 @@ public abstract class AbstractGameState {
             if (otherScore > playerScore)
                 ordinal++;
             else if (otherScore == playerScore && tiebreakFunction != null && tiebreakFunction.apply(i, 1) != Double.MAX_VALUE) {
-                if (getOrdinalPositionTiebreak(i, tiebreakFunction, 1) > getOrdinalPositionTiebreak(playerId, tiebreakFunction, 1))
-                    ordinal++;
+                int tier = 1;
+                while (tier <= getTiebreakLevels()) {
+                    double otherTiebreak = tiebreakFunction.apply(i, tier);
+                    double playerTiebreak = tiebreakFunction.apply(playerId, tier);
+                    if (otherTiebreak == playerTiebreak) {
+                        tier++;
+                    } else {
+                        if (otherTiebreak > playerTiebreak)
+                            ordinal++;
+                        break;
+                    }
+                }
             }
         }
         return ordinal;
     }
 
-    public int getOrdinalPositionTiebreak(int playerId, BiFunction<Integer, Integer, Double> tiebreakFunction, int tier) {
-        int ordinal = 1;
-        Double playerScore = tiebreakFunction.apply(playerId, tier);
-        if (playerScore == null) return ordinal;
-
-        for (int i = 0, n = getNPlayers(); i < n; i++) {
-            double otherScore = tiebreakFunction.apply(i, tier);
-            if (otherScore > playerScore)
-                ordinal++;
-            else if (otherScore == playerScore && tier < getTiebreakLevels() && tiebreakFunction.apply(i, tier+1) != null) {
-                if (getOrdinalPositionTiebreak(i, tiebreakFunction, tier+1) > getOrdinalPositionTiebreak(playerId, tiebreakFunction, tier+1))
-                    ordinal++;
-            }
-        }
-        return ordinal;
-    }
     public int getOrdinalPosition(int playerId) {
         return getOrdinalPosition(playerId, this::getGameScore, this::getTiebreak);
     }
@@ -502,8 +527,7 @@ public abstract class AbstractGameState {
 
     private List<Integer> unknownComponents(IComponentContainer<?> container, int player) {
         ArrayList<Integer> retValue = new ArrayList<>();
-        if (container instanceof PartialObservableDeck<?>) {
-            PartialObservableDeck<?> pod = (PartialObservableDeck<?>) container;
+        if (container instanceof PartialObservableDeck<?> pod) {
             for (int i = 0; i < pod.getSize(); i++) {
                 if (!pod.getVisibilityForPlayer(i, player))
                     retValue.add(pod.get(i).getComponentID());
@@ -513,18 +537,18 @@ public abstract class AbstractGameState {
                 case VISIBLE_TO_ALL:
                     break;
                 case HIDDEN_TO_ALL:
-                    retValue.addAll(container.getComponents().stream().map(Component::getComponentID).collect(toList()));
+                    retValue.addAll(container.getComponents().stream().map(Component::getComponentID).toList());
                     break;
                 case VISIBLE_TO_OWNER:
                     if (((Component) container).getOwnerId() != player)
-                        retValue.addAll(container.getComponents().stream().map(Component::getComponentID).collect(toList()));
+                        retValue.addAll(container.getComponents().stream().map(Component::getComponentID).toList());
                     break;
-                case FIRST_VISIBLE_TO_ALL:
+                case TOP_VISIBLE_TO_ALL:
                     // add everything as unseen, and then remove the first element
-                    retValue.addAll(container.getComponents().stream().map(Component::getComponentID).collect(toList()));
+                    retValue.addAll(container.getComponents().stream().map(Component::getComponentID).toList());
                     retValue.remove(container.getComponents().get(0).getComponentID());
                     break;
-                case LAST_VISIBLE_TO_ALL:
+                case BOTTOM_VISIBLE_TO_ALL:
                     // add in the ID of the last item only
                     int length = container.getComponents().size();
                     retValue.add(container.getComponents().get(length - 1).getComponentID());
@@ -585,15 +609,12 @@ public abstract class AbstractGameState {
 
     /**
      * The equals method is final, but is left here so it is next to hashcode, which is not final
-     * @param o
-     * @return
      */
 
     @Override
     public final boolean equals(Object o) {
         if (this == o) return true;
-        if (!(o instanceof AbstractGameState)) return false;
-        AbstractGameState gameState = (AbstractGameState) o;
+        if (!(o instanceof AbstractGameState gameState)) return false;
         return Objects.equals(gameParameters, gameState.gameParameters) &&
                 gameStatus == gameState.gameStatus &&
                 nPlayers == gameState.nPlayers && roundCounter == gameState.roundCounter &&
@@ -613,13 +634,11 @@ public abstract class AbstractGameState {
     /**
      * Override the hashCode as needed for individual game states
      * (It is OK for two java objects to be not equal and have the same hashcode)
-     *
      *         we deliberately exclude history and allComponents from the hashcode
      *         this is because history is deliberately erased at times to hide hidden information (and is read-only)
      *         and allComponents is not always populated (it is a convenience to get hold of all components in a game
      *         at the superclass level - the actually important components are instantiated in sub-classes, and should be
      *         included in the hashCode() method implemented there
-     * @return
      */
     @Override
     public int hashCode() {
